# WartaPuretai

./: Cargo.toml  Rocket.toml  questions.json
og-image/: README.md  date.typ  inputs.typ  main.typ  mapper.typ  z-place.typ
src/: main.rs  schema.rs  sharing.rs
static/: bg.png~  share.js  style.css
templates/: base.html.tera  index.html.tera  question.html.tera  score.html.tera
