[package]
name = "warta-quiz"
version = "0.1.1"
authors = ["tibo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/rocket.git", rev = "45b4436ed3a7ab913d96c2b69ee4df7fd8c0c618" }
rocket_contrib = { git = "https://github.com/SergioBenitez/rocket.git", features = ["tera_templates"], rev = "45b4436ed3a7ab913d96c2b69ee4df7fd8c0c618" }
tokio = { version = "0.2", features = [ "macros", "fs" ] }
serde = { version = "1.0", features = [ "derive"]}
serde_json = { version = "1.0" }
lazy_static = {version = "1.4.0"}
rand = "0.8"
