[package]
name = "warta-quiz"
version = "0.1.1"
authors = ["tibo", "Ana Gelez <ana@gelez.xyz>", "Edgar Onghena <dev@edgar.bzh>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
tokio = { version = "1.36.0", features = [ "macros" ] }
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
lazy_static = { version = "1.4.0" }
rand = "0.8"
