[package]
name = "warta-quiz"
version = "0.1.1"
authors = ["tibo", "Ana Gelez <ana@gelez.xyz>", "Edgar Onghena <dev@edgar.bzh>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
base64 = "0.22.1"
bincode = "2.0.0-rc.3"
chrono = "0.4.34"
chrono-tz = "0.10.0"
enum-map = { version = "3.0.0-beta.2", features = ["serde"] }
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
tokio = { version = "1.36.0", features = ["macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
vec1 = { version = "1.12", features = ["serde"] }
